erDiagram
    CLIENTI ||--o{ AUTO : "possiede (opzionale)"
    CLIENTI ||--o{ NOLEGGI : "richiede"
    AUTO ||--o{ MANUTENZIONI : "subisce"
    AUTO ||--o{ NOLEGGI : "viene noleggiata in"

    CLIENTI {
        INTEGER id PK
        TEXT nome
        TEXT cognome
        TEXT email
        TEXT telefono
        TEXT indirizzo
        TEXT created_at
    }

    AUTO {
        INTEGER id PK
        TEXT targa UK
        TEXT marca
        TEXT modello
        INTEGER anno
        TEXT colore
        INTEGER km
        REAL prezzo
        TEXT stato "disponibile | venduta | noleggiata | manutenzione"
        INTEGER cliente_id FK "proprietario, nullable"
        TEXT created_at
    }

    MANUTENZIONI {
        INTEGER id PK
        INTEGER auto_id FK
        TEXT data
        TEXT tipo "Tagliando | Cambio gomme | Freni | Revisione | Carrozzeria | Altro"
        TEXT descrizione
        REAL costo
        INTEGER km
        TEXT created_at
    }

    NOLEGGI {
        INTEGER id PK
        INTEGER auto_id FK
        INTEGER cliente_id FK
        TEXT data_inizio
        TEXT data_fine
        REAL prezzo_giornaliero
        TEXT stato "in corso | concluso | annullato"
        TEXT created_at
    }
